# loki

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateProjects.bat  README.md  loki.sln
Sandbox/: Sandbox.vcxproj
loki/: CMakeLists.txt  loki.vcxproj  loki.vcxproj.filters
loki/resources/shaders/: light_fs.glsl  modellight_fs.glsl
loki/resources/shaders/common/: lights.glsl  uniforms.glsl
loki/resources/shaders/lights/: lights_fs.glsl
loki/src/: engine.cpp  engine.h  loki.cpp  loki.h  main.cpp
loki/src/graphics/: camera.cpp  camera.h  cube.cpp  cube.h  directional_light.h  fly_camera.cpp  fly_camera.h  free_camera.cpp  free_camera.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  point_light.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  spot_light.h  texture.cpp  texture.h  texture_cube.cpp  texture_cube.h
loki/src/loki/graphics/: renderer.cpp  renderer.h
loki/src/math/: matrix.h  operation.h  quaternion.h  transformation.h  vector.h
sandbox/: CMakeLists.txt  main.cpp
sandbox/src/: architecturedemo.cpp  assimpdemo.cpp  assimplightsdemo.cpp  imguidemo.cpp  lightdemo.cpp  main.cpp  meshdemo.cpp  multiplelights.cpp  skyboxdemo.cpp
